# CREDIT-x-Lexo

./: README.md  test.js
CREDIT-x-Lexo/: package-lock.json  package.json
CREDIT-x-Lexo/src/: AIHandler.cpp  App.jsx  ChatBotScreen.js  KnowledgeBase.h  knowledge_base.json  main.cpp  main.jsx
CREDIT-x-Lexo/src/chatbot/: AIHandler.h  CMakeLists.txt  ChatBot.c  ChatBot.js  KnowledgeBase.cpp  knowledge_base.json  main.cpp  task.json
lexo-frontend/lexo-admin/: package-lock.json  package.json
yeslah_project_frontend-main/: README.md
yeslah_project_frontend-main/lexo-admin/app/: layout.tsx  page.tsx
yeslah_project_frontend-main/lexo-admin/app/dashboard/: page.tsx
yeslah_project_frontend-main/lexo-admin/components/: Footer.tsx  Header.tsx
yeslah_project_frontend-main/lexo-admin/components/dashboardComponent/: DashboardHeader.tsx
yeslah_project_frontend-main/lexo-user-app/: app.json  package-lock.json  package.json
